--- a/cfg/local.yml
+++ b/cfg/local.yml
@@ -5,7 +5,7 @@ CUDA: False
 TRAIN:
     FLAG: True
     LEARNING_RATE: 0.0001
-    BATCH_SIZE: 4
+    BATCH_SIZE: 64
     MAX_EPOCHS: 25
     SNAPSHOT_INTERVAL: 5
     WEIGHT_INIT: "xavier_uniform"
@@ -16,3 +16,8 @@ TRAIN:
 
 DATASET:
     DATA_DIR: '/Users/sebamenabar/Documents/datasets/CLEVR/data'
+    SCENES_DIR: '/Users/sebamenabar/Documents/datasets/CLEVR/CLEVR_v1.0/scenes/'
+
+MODEL:
+    INPUT_UNIT:
+        NUM_LEARNABLE_OBJECTS: 10
